Bug 1298451 - Unbreak build on DragonFly, FreeBSD, OpenBSD. r=sfink

MozReview-Commit-ID: 4rkKUC6N7Tf

--HG--
extra : rebase_source : d52ef57e886b927eb91fdca985e26927c832ccba